tests/baselines/reference/objectTypesWithPredefinedTypesAsName2.errors.txt
objectTypesWithPredefinedTypesAsName2.ts(3,7): error TS1005: '{' expected.


==== objectTypesWithPredefinedTypesAsName2.ts (1 errors) ====
    // it is an error to use a predefined type as a type name
    
    class void {} // parse error unlike the others
          ~~~~
!!! error TS1005: '{' expected.